--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ h1 {
     height: 300px;
     overflow: hidden;
     position: relative;
+    z-index: -100;
 }
 
 #projects .project-img:after {
