--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1 {
     height: 100%;
     width: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .7;
+    opacity: .4;
 }
 
 #projects .project-img img {
@@ -264,4 +264,17 @@ h3 {
     font-family: cursive;
     text-align: center;
     margin-top: 20px;
+}
+
+@media (min-width:360px) and (max-width:430px) {
+    #projects .project-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        margin: 10px auto;
+        overflow: hidden;
+        border-radius: 6px;
+    }
 }
