--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html{
 /*galeria fotos*/
 
 .pie {
-    margin-top: 300;
+    margin-top: 300px;
     width: 100%;
     height: 160px;
     background-color: #154256;
