--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,12 +3,13 @@ body{
   padding: 0;
 }
 .navbar{
-  background-color: #154256;
+  background-color: #487e96;
   position: sticky;
   -webkit-sticky: sticky;
   top: 0;
   animation: cavesa linear both;
   animation-timeline: scroll(root block);
+  animation-range: 0 200px;
 }
 @keyframes cavesa{
 to{
@@ -34,9 +35,9 @@ li a{
   text-decoration: none;
   display: block;
   padding: 17px 17px;
-  color: #fff;
+  color: #0b48b8;
   font-size: 1.8rem;
- 
+ font-weight: bold;
 }
 li a:hover{
 color: aliceblue;
