--- a/style.css
+++ b/style.css
@@ -242,7 +242,21 @@ h3 {
     text-align: center;
     margin-top: 20px;
 }
- 
+.content .fotos img{
+
+animation: vista linear both;
+animation-timeline: view();
+animation-range: entry 20% cover 30%;
+}
+@keyframes vista{
+from{
+    opacity: 0;
+}
+to{
+opacity: 1;
+}
+
+}
 
 @media (min-width:360px) and (max-width:430px) {
     #projects .project-item {
