--- a/photos.css
+++ b/photos.css
@@ -1,5 +1,5 @@
 /*galeria*/
-
+ 
 .galeria {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+
 }
 
 img {
@@ -20,7 +22,22 @@ img {
     object-fit: cover;
     border-radius: 0.2cm;
 }
+.galeria__item img{
+    animation: vistas linear both;
+    animation-timeline: view();
+    animation-range: entry 20% cover 30%;
 
+
+}
+@keyframes vistas{
+    from{
+        opacity: 0;
+    }
+    to{
+    opacity: 1;
+    }
+    
+    }
 .galeria__item:nth-child(1) {
     grid-row-start: span 2;
 }
