--- a/style.css
+++ b/style.css
@@ -247,13 +247,18 @@ h3 {
 animation: vista linear both;
 animation-timeline: view();
 animation-range: entry 20% cover 30%;
+z-index: 0;
 }
 @keyframes vista{
 from{
     opacity: 0;
+    translate: 0 100px;
+    scale: .5;
 }
 to{
 opacity: 1;
+translate: 0 0;
+scale: 1;
 }
 
 }
